--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ ipython-genutils==0.2.0
 ipywidgets==7.6.3
 jedi==0.18.0
 Jinja2==3.0.1
+joblib==1.0.1
 jsonschema==3.2.0
 jupyter-client==6.1.12
 jupyter-core==4.7.1
@@ -64,13 +65,17 @@ python-dateutil==2.8.1
 pytz==2021.1
 pyzmq==22.1.0
 requests==2.25.1
+scikit-learn==0.24.2
+scipy==1.7.0
 Send2Trash==1.7.1
 six==1.16.0
+sklearn==0.0
 smmap==4.0.0
 streamlit==0.84.0
 tenacity==7.0.0
 terminado==0.10.1
 testpath==0.5.0
+threadpoolctl==2.1.0
 toml==0.10.2
 toolz==0.11.1
 tornado==6.1
